layout issues fixed

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -7501,24 +7501,24 @@ textarea:focus-within {
 }
 .floating-content__top-right {
   right: 0px;
-  top: 10px;
+  top: 20px;
 }
 @media (min-width: 576px) and (max-width: 767px) {
   .floating-content__top-right {
     right: -20px;
-    top: 10px;
+    top: 20px;
   }
 }
 @media (min-width: 768px) and (max-width: 991px) {
   .floating-content__top-right {
     right: 60px;
-    top: -40px;
+    top: -60px;
   }
 }
 @media (min-width: 992px) {
   .floating-content__top-right {
     right: -10px;
-    top: -70px;
+    top: -30px;
   }
 }
 @media (min-width: 768px) {
@@ -8972,8 +8972,21 @@ textarea:focus-within {
     padding-block: 16px;
   }
 }
+.most-popular{
+  padding-top:10px; 
+  margin:-35px -28px 10px -28px;
+  overflow:hidden;
+  border-radius:16px 16px 0px 0px;
+}
 .blog__meta-tag {
   font-size: 0.875rem;
+  padding: 3px 12px;
+  border-radius: 8px;
+  text-transform: capitalize;
+}
+.subs__meta-tag {
+  font-size: 1.200rem;
+  font-weight: bold;
   padding: 3px 12px;
   border-radius: 8px;
   text-transform: capitalize;
